sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: '<-' expected but ')' found.
    for (i-> 0 to longueur-2 ){
                             ^AlgBubbleSort1:17: error: illegal start of simple expression
  }
  ^